--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "covutils",
-  "version": "0.1.0-alpha.5",
+  "version": "0.1.0",
   "license": "BSD-3-Clause",
   "description": "Utilities for creating, transforming, and handling Coverage Data objects.",
   "repository": {
