--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "covutils.*"
   ],
   "dependencies": {
-    "ndarray": "^1.0.18"
+    "ndarray": "^1.0.18",
+    "point-in-big-polygon": "^2.0.0",
+    "topojson": "^1.6.26"
   },
   "scripts": {
     "docs": "esdoc -c esdoc.json",
@@ -51,6 +53,8 @@
     "babelify": "^7.2.0",
     "browserify": "^11.0.1",
     "core-js": "^2.0.2",
+    "delaunay-triangulate": "^1.1.6",
+    "dup": "^1.0.0",
     "esdoc": "^0.4.1",
     "esdoc-importpath-plugin": "0.0.1",
     "finalhandler": "^0.4.1",
@@ -62,6 +66,7 @@
     "mocha": "^2.2.5",
     "serve-static": "^1.10.0",
     "standard": "^5.1.0",
-    "uglify-js": "^2.4.24"
+    "uglify-js": "^2.4.24",
+    "xndarray": "^0.3.0"
   }
 }
