--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": {
     "name": "Maik Riechert"
   },
-  "main": "lib/main.js",
+  "main": "lib/index.js",
+  "jsnext:main": "src/index.js",
   "files": [
     "src/",
     "lib/",
@@ -29,14 +30,14 @@
     "docs": "esdoc -c esdoc.json",
     "style": "standard",
     "transpile": "babel -d lib/ src/",
-    "test": "npm run transpile && npm run testnode && npm run testkarma",
+    "test": "npm run testnode && npm run testkarma",
     "testnode": "mocha --recursive --compilers js:babel-register",
     "testkarma": "karma start --single-run",
     "karma": "karma start",
     "saucelabs": "karma start karma.conf-ci.js",
     "browserdist": "npm run browserdistlite && npm run browserdistfull",
-    "browserdistlite": "browserify lib/main-lite.js -s CovUtils -o covutils-lite.src.js",
-    "browserdistfull": "browserify lib/main.js -s CovUtils -o covutils.src.js",
+    "browserdistlite": "browserify lib/index-lite.js -s CovUtils -o covutils-lite.src.js",
+    "browserdistfull": "browserify lib/index.js -s CovUtils -o covutils.src.js",
     "postbrowserdistlite": "uglifyjs covutils-lite.src.js -c unused=false -o covutils-lite.min.js --source-map covutils-lite.min.js.map",
     "postbrowserdistfull": "uglifyjs covutils.src.js -c unused=false -o covutils.min.js --source-map covutils.min.js.map",
     "build": "npm run transpile && npm run browserdist",
@@ -58,6 +59,7 @@
     "babelify": "^7.2.0",
     "browserify": "^11.0.1",
     "core-js": "^2.0.2",
+    "covjson-reader": "^0.12.1",
     "delaunay-triangulate": "^1.1.6",
     "dup": "^1.0.0",
     "esdoc": "^0.4.1",
