use rollup for browser bundle creation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "covutils",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "license": "BSD-3-Clause",
   "description": "Utilities for creating, transforming, and handling Coverage Data objects.",
   "repository": {
@@ -35,11 +35,9 @@
     "testkarma": "karma start --single-run",
     "karma": "karma start",
     "saucelabs": "karma start karma.conf-ci.js",
-    "browserdist": "npm run browserdistlite && npm run browserdistfull",
-    "browserdistlite": "browserify lib/index-lite.js -s CovUtils -o covutils-lite.src.js",
-    "browserdistfull": "browserify lib/index.js -s CovUtils -o covutils.src.js",
-    "postbrowserdistlite": "uglifyjs covutils-lite.src.js -c unused=false -o covutils-lite.min.js --source-map covutils-lite.min.js.map",
-    "postbrowserdistfull": "uglifyjs covutils.src.js -c unused=false -o covutils.min.js --source-map covutils.min.js.map",
+    "browserdist": "npm run browserdistfull && npm run browserdistlite",
+    "browserdistlite": "rollup -c rollup.config.lite-src.js && rollup -c rollup.config.lite-min.js",
+    "browserdistfull": "rollup -c rollup.config.src.js && rollup -c rollup.config.min.js",
     "build": "npm run transpile && npm run browserdist",
     "prepublish": "npm run build"
   },
@@ -53,15 +51,14 @@
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
-    "babel-eslint": "^4.1.3",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.3.13",
+    "babel-eslint": "^6.0.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-register": "^6.9.0",
     "babelify": "^7.2.0",
     "browserify": "^11.0.1",
     "core-js": "^2.0.2",
     "covjson-reader": "^0.12.1",
-    "delaunay-triangulate": "^1.1.6",
-    "dup": "^1.0.0",
     "esdoc": "^0.4.1",
     "esdoc-importpath-plugin": "0.0.1",
     "finalhandler": "^0.4.1",
@@ -70,7 +67,12 @@
     "karma-chrome-launcher": "^0.2.0",
     "karma-mocha": "^0.2.0",
     "karma-sauce-launcher": "^0.2.14",
-    "mocha": "^2.2.5",
+    "mocha": "^2.5.3",
+    "rollup": "^0.30.0",
+    "rollup-plugin-babel": "^2.5.1",
+    "rollup-plugin-commonjs": "^3.1.0",
+    "rollup-plugin-node-resolve": "^1.7.1",
+    "rollup-plugin-uglify": "^1.0.1",
     "serve-static": "^1.10.0",
     "standard": "^5.1.0",
     "uglify-js": "^2.4.24",
