--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ndarray": "^1.0.18",
     "uriproj": "^0.2.2",
     "point-in-big-polygon": "^2.0.0",
-    "topojson": "^1.6.26"    
+    "topojson": "^1.6.26"
   },
   "jspm": {
     "registry": "npm",
@@ -35,7 +35,7 @@
   "scripts": {
     "esdoc": "esdoc -c esdoc.json",
     "docs": "documentation build src/index.js -f html -o docs/",
-    "transpile": "babel -d lib/ src/",
+    "transpile": "babel --presets es2015 -d lib/ src/",
     "test": "standard && npm run testkarma",
     "testkarma": "karma start --single-run",
     "karma": "karma start",
@@ -56,31 +56,33 @@
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^7.0.0",
+    "babel-plugin-external-helpers": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-rollup": "^1.1.1",
     "babel-register": "^6.9.0",
     "babelify": "^7.2.0",
-    "browserify": "^11.0.1",
+    "browserify": "^13.1.0",
     "core-js": "^2.0.2",
-    "covjson-reader": "^0.16.0",
+    "covjson-reader": "^0.16.3",
+    "documentation": "^4.0.0-beta5",
     "esdoc": "^0.4.1",
     "esdoc-importpath-plugin": "0.0.1",
-    "documentation": "^4.0.0-beta5",
-    "finalhandler": "^0.4.1",
-    "karma": "^0.13.9",
-    "karma-browserify": "^4.4.2",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-mocha": "^0.2.0",
-    "karma-sauce-launcher": "^0.2.14",
-    "mocha": "^2.5.3",
-    "rollup": "^0.30.0",
+    "finalhandler": "^0.5.0",
+    "karma": "^1.3.0",
+    "karma-browserify": "^5.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.2.0",
+    "karma-sauce-launcher": "^1.0.0",
+    "mocha": "^3.1.2",
+    "rollup": "^0.36.3",
     "rollup-plugin-babel": "^2.5.1",
-    "rollup-plugin-commonjs": "^3.1.0",
-    "rollup-plugin-node-resolve": "^1.7.1",
+    "rollup-plugin-commonjs": "^5.0.5",
+    "rollup-plugin-json": "^2.0.2",
+    "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
     "serve-static": "^1.10.0",
-    "standard": "^5.1.0",
+    "standard": "^8.4.0",
     "uglify-js": "^2.4.24",
     "xndarray": "^0.3.0"
   }
