--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "babel-cli": "^6.3.17",
     "babel-eslint": "^7.0.0",
     "babel-plugin-external-helpers": "^6.8.0",
+    "babel-plugin-istanbul": "^2.0.3",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-es2015-rollup": "^1.1.1",
     "babel-register": "^6.9.0",
     "babelify": "^7.2.0",
     "browserify": "^13.1.0",
@@ -69,9 +69,11 @@
     "esdoc": "^0.4.1",
     "esdoc-importpath-plugin": "0.0.1",
     "finalhandler": "^0.5.0",
+    "istanbul": "^0.4.5",
     "karma": "^1.3.0",
     "karma-browserify": "^5.1.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.2.0",
     "karma-sauce-launcher": "^1.0.0",
     "mocha": "^3.1.2",
