fix codecov reporting

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "testkarma": "karma start --single-run",
     "karma": "karma start",
     "saucelabs": "karma start karma.conf-ci.js",
+    "report-coverage": "codecov",
     "browserdist": "npm run browserdistfull && npm run browserdistlite",
     "browserdistlite": "rollup -c rollup.config.lite-src.js && rollup -c rollup.config.lite-min.js",
     "browserdistfull": "rollup -c rollup.config.src.js && rollup -c rollup.config.min.js",
@@ -63,6 +64,7 @@
     "babel-register": "^6.9.0",
     "babelify": "^7.2.0",
     "browserify": "^13.1.0",
+    "codecov": "^1.0.1",
     "core-js": "^2.0.2",
     "covjson-reader": "^0.16.3",
     "documentation": "^4.0.0-beta5",
