--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "name": "Maik Riechert"
   },
   "main": "lib/index.js",
-  "jsnext:main": "src/index.js",
+  "module": "src/index.js",
   "files": [
     "src/",
     "lib/",
@@ -22,71 +22,50 @@
     "covutils-lite.*"
   ],
   "dependencies": {
+    "@mapbox/geojson-rewind": "^0.5.1",
     "ndarray": "^1.0.18",
-    "uriproj": "^0.2.2",
     "point-in-big-polygon": "^2.0.0",
-    "topojson": "^1.6.26"
-  },
-  "jspm": {
-    "registry": "npm",
-    "format": "esm",
-    "main": "src/index.js"
+    "uriproj": "^0.2.2"
   },
   "scripts": {
-    "esdoc": "esdoc -c esdoc.json",
-    "docs": "documentation build src/index.js -f html -o docs/",
-    "transpile": "babel --presets es2015 -d lib/ src/",
-    "test": "standard && npm run testkarma",
-    "testkarma": "karma start --single-run",
+    "docs": "esdoc -c esdoc.json",
+    "style": "eslint src/",
+    "transpile": "babel -d lib/ src/",
+    "test": "karma start --single-run",
     "karma": "karma start",
-    "saucelabs": "karma start karma.conf-ci.js",
-    "report-coverage": "codecov",
-    "browserdist": "npm run browserdistfull && npm run browserdistlite",
-    "browserdistlite": "rollup -c rollup.config.lite-src.js && rollup -c rollup.config.lite-min.js",
-    "browserdistfull": "rollup -c rollup.config.src.js && rollup -c rollup.config.min.js",
+    "browserdist": "rollup -c",
     "build": "npm run transpile && npm run browserdist",
     "prepublish": "npm run build"
   },
-  "standard": {
-    "parser": "babel-eslint",
-    "ignore": [
-      "karma.conf.js",
-      "karma.conf-ci.js",
-      "test/"
-    ]
-  },
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-eslint": "^7.0.0",
-    "babel-plugin-external-helpers": "^6.8.0",
-    "babel-plugin-istanbul": "^2.0.3",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-register": "^6.9.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.1.0",
-    "codecov": "^1.0.1",
-    "core-js": "^2.0.2",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.5",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/register": "^7.16.5",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.1",
+    "babel-plugin-istanbul": "^6.1.1",
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0",
     "covjson-reader": "^0.16.3",
-    "documentation": "^4.0.0-beta5",
-    "esdoc": "^0.4.1",
-    "esdoc-importpath-plugin": "0.0.1",
-    "finalhandler": "^0.5.0",
-    "istanbul": "^0.4.5",
-    "karma": "^1.3.0",
-    "karma-browserify": "^5.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.2.0",
-    "karma-sauce-launcher": "^1.0.0",
-    "mocha": "^3.1.2",
-    "rollup": "^0.36.3",
-    "rollup-plugin-babel": "^2.5.1",
-    "rollup-plugin-commonjs": "^5.0.5",
-    "rollup-plugin-json": "^2.0.2",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-uglify": "^1.0.1",
-    "serve-static": "^1.10.0",
-    "standard": "^8.4.0",
+    "esdoc": "^1.1.0",
+    "esdoc-importpath-plugin": "1.0.2",
+    "esdoc-standard-plugin": "^1.0.0",
+    "eslint": "^7.12.1",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-promise": "^5.0.0",
+    "eslint-plugin-standard": "^4.1.0",
+    "karma": "^6.3.9",
+    "karma-browserify": "^8.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.1.0",
+    "karma-firefox-launcher": "^2.1.2",
+    "karma-mocha": "^2.0.1",
+    "mocha": "^9.1.3",
+    "rollup": "^2.62.0",
+    "rollup-plugin-terser": "^7.0.0",
     "xndarray": "^0.3.0"
   }
 }
